$Id$

--------
20040215
--------

GENERAL:
- Adapting to Code Warrior for Windows and Macintosh.
- Fixing g++ warning.
- Fixing CW warnings (all but 'unused argument').
- Adapting to changes in 'TOL' library ('E_' prefix for macros).
- Renaming 'Read', 'Write', 'Synchronize' adn 'data__' in
- 'Recall' 'Store', 'Flush' and 'datum__' in all memory-related libraries.

AEM:
- Bug fixing of the (p_)_amount_extent_manager__ and related classes.
- Adding (p_)_amount_extent_manager___ class.

BCH:
- Bug fixing of the E_BUNCHt__(_) and related classes.
- Rewriting 'WriteAndAdjust()' methods.
- Renaming in 'Append' and rewriting 'Add' methods.
- Renaming 'Row()' into 'Search()'.
- Fixing bug in 'StoreAndAdjust()' method.
- Adding 'GetRelations()' function.

BITBCH:
- Fixing bug.
- Renaming 'Add' to 'Append'.
- Adapting to changes in 'BCH' library.
- Adding 'E_BIT_BUNCH(t)(_) macros.
- Fixing 'operator =' bug.

BSO:
- Adding the 'Convert(...)' functions.

BTF:
- Adding a dummy 'Exists()' method, and the 'row__' type due to changes in 'STK' library.
- Adding 'Root' parameter to the 'Init' function.
- Handling empty tree.

BTS:
- Adding 'tBack' and 'tForward' in replacement of 'tParent'.
- Handling empty tree.

CCH:
- Renaming 'Add' to 'Append'.

CLNARG:
- Adapting to changes in 'BCH' library.
- Adaptinf to changes in 'CTN' library.

CSM:
- Adapting tochanges in 'MTK'.

CTN:
- Renaming the 'Sync()' method in 'Set()' and 'Flush()'.
- Fixing GNU GCC issues.
- Renaming 'Create()' into 'New()' to avoid mistakes.
- Renaming 'Add' to 'Append'.
- Adding features to avoid problems which appears when some 'Flush' call are missing.
- Fixing mistake in 'Delete' method.
- Adding some tests about flushing in debug context.

CPE:
- Adding detection of cygwin.
- Disabling C++ warning C4786.
- Adding multithreading detection for CodeWarrior.

CVM:
- Adapting to changes in 'MDR' library.

DBT:
- Adapting to changes in 'LST' library.
- Adapting to changes in 'LSTBCH' library.